--- a/action.yml
+++ b/action.yml
@@ -48,14 +48,12 @@ runs:
         update-environment: false
 
     - name: Move deps to a public path so we can hash them in another action.
-      run: |
-        mkdir /tmp/baipp
-        cp ${{ github.action_path }}/requirements/tools.txt /tmp/baipp/tools.txt
+      run: cp ${{ github.action_path }}/requirements/tools.txt /tmp/tools.txt
       shell: bash
 
     - uses: hynek/setup-cached-uv@v1
       with:
-        cache-dependency-path: /tmp/baipp/tools.txt
+        cache-dependency-path: /tmp/tools.txt
 
     - name: Create venv for tools
       run: >
