--- a/action.yml
+++ b/action.yml
@@ -51,15 +51,18 @@ runs:
       run: curl -LsSf https://astral.sh/uv/install.sh | sh
       shell: bash
 
-    - name: Find uv cache
-      run: echo "UV_CACHE=$(uv cache dir)" >>$GITHUB_ENV
+    - name: Find uv cache and hash lock file
+      run: |
+        echo "UV_CACHE=$(uv cache dir)" >>$GITHUB_ENV
+
+        echo "REQS_HASH=$(sha256sum ${{ github.action_path }}/requirements/tools.txt | cut -d' ' -f1)" >>$GITHUB_ENV
       shell: bash
 
     - name: Cache uv
       uses: actions/cache@v4
       with:
         path: ${{ env.UV_CACHE }}
-        key: ${{ runner.os }}-uv
+        key: baipp-${{ env.REQS_HASH }}
 
     - name: Create venv for tools
       run: >
