--- a/action.yml
+++ b/action.yml
@@ -68,7 +68,7 @@ runs:
 
     - name: Create venv for tools
       run: >
-        env UV_SYSTEM_PYTHON="false"
+        env UV_SYSTEM_PYTHON="no"
         uv venv
         /tmp/baipp
         --python ${{ steps.python-baipp.outputs.python-path }}
