--- a/action.yml
+++ b/action.yml
@@ -120,6 +120,12 @@ runs:
       with:
         subject-path: "/tmp/baipp/dist/*"
 
+    - name: Add contents header if provenance is present
+      if: ${{ inputs.attest-build-provenance-github == 'true' }}
+      shell: bash
+      run: echo -e '\n### Package Contents' >> $GITHUB_STEP_SUMMARY
+
+
     - name: Set output
       id: dist-location-setter
       shell: bash
