Add provenance header to summary for nicer readability (#131)
* Add header to contents to separate it from provenance

* Temporarily print always to see markup

* It looks nice, let's leave it on always

* Add changelog

* Kill stray empty line

--- a/action.yml
+++ b/action.yml
@@ -120,6 +120,10 @@ runs:
       with:
         subject-path: "/tmp/baipp/dist/*"
 
+    - name: Add contents header
+      shell: bash
+      run: echo -e '\n### Package Contents' >> $GITHUB_STEP_SUMMARY
+
     - name: Set output
       id: dist-location-setter
       shell: bash
