Prune uv's CI cache
Just keep the downloaded packages to make cache operations faster.

--- a/action.yml
+++ b/action.yml
@@ -114,6 +114,10 @@ runs:
       shell: bash
       working-directory: ${{ inputs.path }}
 
+    - name: Optimize uv cache for CI
+      run: uv cache prune --ci
+      shell: bash
+
     - name: Attest GitHub build provenance
       if: ${{ inputs.attest-build-provenance-github == 'true' }}
       uses: actions/attest-build-provenance@v1
