--- a/action.yml
+++ b/action.yml
@@ -66,8 +66,8 @@ runs:
         echo "REQS_HASH=$(sha256sum ${{ github.action_path }}/requirements/tools.txt | cut -d' ' -f1)" >>$GITHUB_ENV
       shell: bash
 
-    - name: Restore uv cache
-      uses: actions/cache/restore@v4
+    - name: Setup uv cache
+      uses: actions/cache@v4
       with:
         path: ${{ env.UV_CACHE_DIR }}
         key: baipp-${{ env.REQS_HASH }}
@@ -107,31 +107,16 @@ runs:
         export SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
 
         if [[ "${{ inputs.skip-wheel }}" == "true" ]]; then
-          /tmp/baipp/bin/python -m build --installer=uv --sdist --outdir /tmp/baipp/dist
+          /tmp/baipp/bin/python -Im build --installer=uv --sdist --outdir /tmp/baipp/dist
         else
-          /tmp/baipp/bin/python -m build --installer=uv --outdir /tmp/baipp/dist
+          /tmp/baipp/bin/python -Im build --installer=uv --outdir /tmp/baipp/dist
         fi
       shell: bash
       working-directory: ${{ inputs.path }}
 
-
-    - name: debug pre
-      run: ls -al ${{ env.UV_CACHE_DIR }}
-      shell: bash
-
     - name: Optimize uv cache for CI
       run: uv cache prune --ci
       shell: bash
-
-    - name: debug post
-      run: ls -al ${{ env.UV_CACHE_DIR }}
-      shell: bash
-
-    - name: Save uv cache
-      uses: actions/cache/save@v4
-      with:
-        path: ${{ env.UV_CACHE_DIR }}
-        key: baipp-${{ env.REQS_HASH }}
 
     - name: Attest GitHub build provenance
       if: ${{ inputs.attest-build-provenance-github == 'true' }}
