--- a/action.yml
+++ b/action.yml
@@ -36,14 +36,17 @@ outputs:
       versions. When loaded using the 'fromJson' function, this can be assigned
       to a matrix strategy key (for example, `python-version`).
 
-    value: ${{ steps.supported-pythons-setter.outputs.supported_python_classifiers_json_array }}
+    value: ${{ steps.metadata-setter.outputs.supported_python_classifiers_json_array }}
   supported_python_classifiers_json_job_matrix_value:
     description: >
       Same as 'supported_python_classifiers_json_array', except it's already a
       JSON mapping from "python-version" to a list of all classifier-declared
       supported Python versions. In other words, you can assign it directly to
       the 'strategy.matrix' key.
-    value: ${{ steps.supported-pythons-setter.outputs.supported_python_classifiers_json_job_matrix_value }}
+    value: ${{ steps.metadata-setter.outputs.supported_python_classifiers_json_job_matrix_value }}
+  package_version:
+    description: The version of the package as declared in the metadata.
+    value: ${{ steps.metadata-setter.outputs.package_version }}
 
 runs:
   using: composite
@@ -233,18 +236,24 @@ runs:
         path: /tmp/baipp/dist/out/sdist/PyPI-README.*
 
     - name: Generate JSON objects of supported Python versions
-      id: supported-pythons-setter
+      id: metadata-setter
       shell: bash
       working-directory: /tmp/baipp/dist/out/sdist/
       run: |
           cat */PKG-INFO | python -c '
+          import email.parser
           import json, re, sys
-          match_classifier = re.compile(
-              r"\s*Classifier: Programming Language :: Python :: (\d+\.\d+)$"
-          ).match
-          version_tokens = [
-              m.group(1).strip() for l in sys.stdin.readlines() if (m := match_classifier(l))
-          ]
+
+          pkg_info = email.parser.Parser().parsestr(sys.stdin.read())
+
+          version_tokens = []
+          for classifier in pkg_info.get_all("Classifier", []):
+              if match := re.match(r"Programming Language :: Python :: (\d+\.\d+)$", classifier):
+                  version_tokens.append(match.group(1))
+
+          package_version = pkg_info.get("Version", "0.0.0")
+
+          print(f"package_version={package_version}")
           print(f"supported_python_classifiers_json_array={json.dumps(version_tokens)}")
           print(f"""supported_python_classifiers_json_job_matrix_value={json.dumps({"python-version": version_tokens})}""")
           ' >> $GITHUB_OUTPUT
