--- a/action.yml
+++ b/action.yml
@@ -58,7 +58,7 @@ runs:
     - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
       id: python-baipp
       with:
-        python-version: "3.x"
+        python-version: "3.14"
         update-environment: false
 
     - name: Install uv
