--- a/action.yml
+++ b/action.yml
@@ -50,7 +50,11 @@ outputs:
   package_version:
     description: The version of the package as declared in the metadata.
     value: ${{ steps.metadata-setter.outputs.package_version }}
-
+  python-version:
+    description: 'Python version to use for building the package'
+    required: false
+    default: '3.14'
+    
 runs:
   using: composite
 
@@ -58,7 +62,7 @@ runs:
     - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
       id: python-baipp
       with:
-        python-version: "3.14"
+        python-version: ${{ inputs.python-version }} 
         update-environment: false
 
     - name: Install uv
